新增加了配网UI，但是功能还未实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,9 @@
         <service
             android:name=".SearchDeviceService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".AddDeviceActivity"></activity>
     </application>
 
 </manifest>
