--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.google.android.gms:play-services:11.0.0'
+    compile 'com.android.support:design:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
 }
